--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 
-<!doctype htm>
-<html lang="en"></html>
-
+<!DOCTYPE htm>
+<html lang="en">
 <head>
 
     <meta charset="utf-8">
@@ -50,3 +49,5 @@
 
 
 </head>
+
+</html>
