--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <h2>Why validate your code ?</h2>
     <p>Here is one reason , W3C validation is the process of checking a website's code to determine if it follows the formatting standards. If you fail to validate your website's pages based on W3C standards, your website will most likely suffer from errors or poor traffic owing to poor formatting and readability.</p>
     
-    <table> <tr> <th> Description</th><th>Wind speed</th><th>Damage</th></tr><tr><td>Tropical dep</td><td>38MPH</td><td>weak</td></tr><tr><td>tropical storm</td> <td>39-73</td><td>minor</td></tr><tr><td>0-5MPH</td><td>5-10MPH</td><td>10-15</td></tr></table>
+    <table> <tr> <th> Description</th><th>Wind speed</th><th>Damage</th></tr><tr><td>Tropical dep</td><td>38MPH</td><td>weak</td></tr><tr><td>tropical storm</td> <td>39-73</td><td>minor</td></tr><tr><td>Tropical Cyclone</td><td>30MPH</td><td>medium</td></tr></table>
 
 
 
