--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <body>
         
         
-    <h1>Shiva Choudhary </h1>
+    <h1>France </h1>
 
     <h2> Some important things you want to include in your webpage </h2>
         <ul>
