--- a/index.html
+++ b/index.html
@@ -62,7 +62,14 @@
          <h3>Current issues</h3>
          <p>some forest damage from acid rain; air pollution from industrial and vehicle emissions; water pollution from urban wastes, agricultural runoff</p>
          <h3>International Agreements</h3>
-         <p>party to: Air Pollution, Air Pollution-Heavy Metals, Air Pollution-Multi-effect Protocol, Air Pollution-Nitrogen Oxides, Air Pollution-Persistent Organic Pollutants, Air Pollution-Sulphur 85, Air Pollution-Sulphur 94, Air Pollution-Volatile Organic Compounds, Antarctic-Environmental Protection, Antarctic-Marine Living Resources, Antarctic Seals, Antarctic Treaty, Biodiversity, Climate Change, Climate Change-Kyoto Protocol, Climate Change-Paris Agreement, Comprehensive Nuclear Test Ban, Desertification, Endangered Species, Hazardous Wastes, Law of the Sea, Marine Dumping-London Convention, Marine Dumping-London Protocol, Marine Life Conservation, Ozone Layer Protection, Ship Pollution, Tropical Timber 2006, Wetlands, Whaling</p>
+         <ul>
+            <li>Air Pollution  </li>   
+            <li> Antarctic-Environmental Protection </li>
+            <li>Biodiversity, Climate Change </li>
+            <li>Climate Change-Kyoto Protocol</li>
+            <li>Comprehensive Nuclear Test Ban</li>
+            <li>Endangered Species</li>
+            </ul>
          <h3>Climate</h3>
          <p>metropolitan France: generally cool winters and mild summers, but mild winters and hot summers along the Mediterranean; occasional strong, cold, dry, north-to-northwesterly wind known as the mistral</p>
 
