--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
        
     <h2>Geography</h2>
     <h3>Location </h3>
-    <p>metropolitan France: Western Europe, bordering the Bay of Biscay and English Channel, between Belgium and Spain, southeast of the UK; bordering the Mediterranean Sea, between Italy and Spain;</p>
+    <p>Metropolitan France: Western Europe, bordering the Bay of Biscay and English Channel, between Belgium and Spain, southeast of the UK; bordering the Mediterranean Sea, between Italy and Spain;</p>
     <p>French Guiana: Northern South America, bordering the North Atlantic Ocean, between Brazil and Suriname;</p>
     <p>Guadeloupe: Caribbean, islands between the Caribbean Sea and the North Atlantic Ocean, southeast of Puerto Rico;</p>
     <h3>Geographic coordinates </h3>
     <ul>
-        <li> metropolitan France: 46 00 N, 2 00 E;   </li>   
+        <li> Metropolitan France: 46 00 N, 2 00 E;   </li>   
         <li> French Guiana: 4 00 N, 53 00 W;   </li>
         <li> Guadeloupe: 16 15 N, 61 35 W; </li>
         
@@ -45,8 +45,8 @@
     <p>Total population : 68,521,974 (2023 est.) note: the population figure is for metropolitan France and five overseas regions; the metropolitan France population is 62,814,233</p>
        <h3>Nationality</h3>
     <ul>
-        <li> noun: Frenchman(men), Frenchwoman(women) </li>   
-        <li> adjective: French   </li>
+        <li> Noun: Frenchman(men), Frenchwoman(women) </li>   
+        <li> Adjective: French   </li>
          </ul>
      <h3>Ethnic Groups</h3>
          <ul>
@@ -60,7 +60,7 @@
 
     <h2>Environment</h2>
          <h3>Current issues</h3>
-         <p>some forest damage from acid rain; air pollution from industrial and vehicle emissions; water pollution from urban wastes, agricultural runoff</p>
+         <p>Some forest damage from acid rain; air pollution from industrial and vehicle emissions; water pollution from urban wastes, agricultural runoff</p>
          <h3>International Agreements</h3>
          <ul>
             <li>Air Pollution  </li>   
@@ -71,7 +71,7 @@
             <li>Endangered Species</li>
             </ul>
          <h3>Climate</h3>
-         <p>metropolitan France: generally cool winters and mild summers, but mild winters and hot summers along the Mediterranean; occasional strong, cold, dry, north-to-northwesterly wind known as the mistral</p>
+         <p>Metropolitan France: generally cool winters and mild summers, but mild winters and hot summers along the Mediterranean; occasional strong, cold, dry, north-to-northwesterly wind known as the mistral</p>
 
 
     </body>
