--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
          <h3>Climate</h3>
          <p>Metropolitan France: generally cool winters and mild summers, but mild winters and hot summers along the Mediterranean; occasional strong, cold, dry, north-to-northwesterly wind known as the mistral</p>
 
-
+    <h2>External Links</h2>
+    <ul>
+        <li><a href="https://www.cia.gov/the-world-factbook/countries/france"> Webpage source : CIA World Factbook</a> </li>   
+        <li> <a href="https://www.gouvernement.fr/"> French government website</a>  </li>
+       
+        </ul>
     </body>
 
 </html>
