--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     
 
-    <body id="Intro"></body>
+    <body id="Intro">
     <h2> Introduction</h2>
         </body>
         <p> France today is one of the most modern countries in the world and is a leader among European nations. It plays an influential global role as a permanent member of the United Nations Security Council, NATO, the G-7, the G-20, the EU, and other multilateral organizations. France rejoined NATO's integrated military command structure in 2009, reversing DE GAULLE's 1966 decision to withdraw French forces from NATO.  </p>
