--- a/index.html
+++ b/index.html
@@ -108,5 +108,14 @@
         </footer>
 
     
+
+        <figure>
+            <img src="satimage.jpg" alt="Satellite Image of France"> 
+            <figcaption>Satellite image from the CIA World factbook website</figcaption>
+        </figure>
+
+
     </body>
+
+
 </html>
