--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
       
     <figure>
-        <img src="Effiel-Tower.jpg" alt="The Effiel Tower"> 
+        <img src="effiel.jpg" alt="The Effiel Tower"> 
         <figcaption>Effiel Tower image from the CIA World factbook website</figcaption>
     </figure>
         
