--- a/france.html
+++ b/france.html
@@ -110,7 +110,7 @@
     
 
                 <figure>
-                        <img src="satimage.jpg" alt="Satellite Image of France"> 
+                        <img src="sat-image.jpg" alt="Satellite Image of France"> 
                         <figcaption>Satellite image from the CIA World factbook website</figcaption>
                 </figure>
 
