--- a/france.html
+++ b/france.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <title> France</title>
     </head>
-    
+    <link rel="stylesheet" href="style.css">
         <body>
       
                 <figure>
